--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "scripts": {
         "build": "tsc",
+        "prepare": "npm run build",
         "test": "tsx --test tests/*.test.ts tests/**/*.test.ts",
         "test:single": "tsx --test",
         "clean": "rm -rf dist"
